Increase StringImpl Flag Bits for 8 bit Strings https://bugs.webkit.org/show_bug.cgi?id=70937

Increased the number of bits used for flags in StringImpl
from 6 to 8 bits. This frees up 2 flag bits that will be
used for 8-bit string support. Updated hash methods accordingly.
Changed hash value masking from the low bits to the high
bits.

Reviewed by Darin Adler.

Source/JavaScriptCore:

* create_hash_table:
* wtf/StringHasher.h:
(WTF::StringHasher::hash):
* wtf/text/StringImpl.h:

Source/WebCore:

* bindings/scripts/CodeGeneratorJS.pm:
(GenerateHashValue):


Canonical link: https://commits.webkit.org/87145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98495 268f45cc-cd09-0410-ab3c-d52691b4dbfc